Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49634

Opacity Animator crash when item is destroyed during animation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.4.1
    • None
    • Core dump is on Linux. The example can be run on windows as well.

    Description

      When using OpacityAnimator, if an item is destroyed while still animating, a crash will occur. If you replace OpacityAnimator with NumberAnimation with the opacity property, there is no crash.

      Attached the core dump.

      I've also attached a simple example of this for you to work with. It looks like m_target is not getting set to NULL when the item is destroyed. Therefore, QT is still trying to get it and use it.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lemire_p Paul Lemire
            jzahtz Jonathan Zahtz
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes